--- a/recommender/dashboard/templates/dashboard.html
+++ b/recommender/dashboard/templates/dashboard.html
@@ -4,34 +4,66 @@
 {% block css_cdn %}
     <link rel="stylesheet" href="{% static 'src/dashboard.css' %}">
 {% endblock css_cdn %}
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="{% static 'js/search.js' %}"></script>
+
 {% block content %}
-
-
-
 
     <section class="dashboard-container">
         <!-- TOP BANNER SECTION -->
         <section class="top-banner">
+
+            {# SEARCH FORM #}
+            <form class="max-w-md mx-auto" action="{% url 'dashboard:search_suggestions' %}" method="GET"
+                  id="search-form">
+                {% csrf_token %}
+                <label for="default-search" class="mb-2 text-sm font-medium text-purple-900 sr-only">Search</label>
+                <div class="relative search-div">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                        <svg class="w-4 h-4 text-purple-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                  stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                        </svg>
+                    </div>
+                    <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-purple-900 border
+                border-purple-300 rounded-lg bg-purple-50 focus:ring-purple-500 focus:border-purple-500"
+                           placeholder="   &nbsp;&nbsp;Search for Degrees and Institutions..." required
+                           style="border-radius: 1rem; border: #5521b5; background-color: white"/>
+                    <button type="submit"
+                            class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-700 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2">
+                        Search
+                    </button>
+
+                    <!-- Dropdown to Show Results -->
+                    <ul id="suggestions-list" style="position: absolute; top: 100%; left: 0; width: 100%; background-color: white; 
+            border: 1px solid #ccc; border-radius: 8px; padding: 0; list-style: none; z-index: 1000; display: none;">
+                    </ul>
+                </div>
+            </form>
+
+            {#HEADINGS#}
             <div class="grid max-w-screen-xl px-4 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 lg:pt-28">
                 <div class="mr-auto place-self-center lg:col-span-7 heading-div">
                     <h1
-                            class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl dark:text-white heading1">
+                            class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl
+                              heading1">
                         Discover the Best Degree & Institution for You </h1>
                     <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl heading2"
                        style="color: black; font-weight: bold">
                         a vast selection of degree programs and institutions, all in one place!</p>
                     <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
                         <a href="{% url 'users:signup' %}"
-                           class="inline-flex items-center justify-center w-64 px-5 py-3 text-sm font-medium text-center text-white border border-purple-500 rounded-lg bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300"
+                           class="inline-flex items-center justify-center w-64 px-5 py-3 text-sm font-medium text-center
+                           text-white border border-purple-500 rounded-lg bg-purple-700 hover:bg-purple-800 focus:ring-4
+                           focus:ring-purple-300"
                            style="color: white">
                             Get Started
                         </a>
-
-
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!-- TOP RATED COURSES SECTION -->
@@ -46,7 +78,8 @@
                          style="scroll-snap-type: x mandatory; overflow-y: hidden; white-space: nowrap;">
                         <!-- Card 1 -->
                         {% for course in course_data %}
-                            <div class="flex-shrink-0 w-72 bg-white border border-gray-200 rounded-lg shadow-sm scroll-snap-align-start"
+                            <div class="flex-shrink-0 w-72 bg-white border border-gray-200 rounded-lg shadow-sm
+                            scroll-snap-align-start"
                                  style="max-height: 35rem; display: inline-block;">
                                 <a href="#">
                                     <img class="rounded-t-lg object-cover h-40 w-full"
@@ -64,7 +97,9 @@
                                     </p>
 
                                     <a href="{% url 'institutions:courses' %}"
-                                       class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 read-more"
+                                       class="inline-flex items-center px-3 py-2 text-sm font-medium text-center
+                                        text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none
+                                        focus:ring-blue-300 read-more"
                                        style="background-color: #5521b5;">
                                         Read more
                                         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true"
