--- a/recommender/static/src/view_course.css
+++ b/recommender/static/src/view_course.css
@@ -57,3 +57,32 @@ a:hover {
 .back-btn:hover {
     background-color: #7e22ce;
 }
+
+.container-div{
+    margin-top: 6.5rem;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: solid mediumpurple;
+    border-radius: 16px;
+}
+
+.ins-para{
+    padding: 6px;
+
+}
+
+.courses-div{
+    padding: 20px;
+}
+
+.items{
+    margin-bottom: 5px;
+}
+
+.main-heading{
+    padding: 20px;
+}
+
+.reverse-btn{
+    margin: 20px;
+}
