--- a/recommender/templates/base.html
+++ b/recommender/templates/base.html
@@ -12,15 +12,9 @@
 
     <meta name="title" content="PathFinder AI">
     <meta name="language" content="English">
-
-
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="{% static 'site.webmanifest' %}">
 
     <!-- CSS Files -->
     {% load static %}
@@ -34,35 +28,86 @@
     {% endcompress %}
 
     {% block js_cdn %} {% endblock js_cdn %}
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet"/>
 
+    <!--CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 
     <!-- JavaScript -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-<script src="https://kit.fontawesome.com/9f23ea878d.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/9f23ea878d.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
 
 </head>
 
 <body>
-
 <header class="fixed w-full">
     <nav class="bg-white border-gray-200 py-2.5">
         <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
             <a href="#" class="flex items-center">
-                    <span class="self-center text-xl font-semibold whitespace-nowrap"
-                          style="color: black; font-size:25px; font-family: 'Inter', sans-serif;">PathFinder AI</span>
+                <span class="self-center text-xl font-semibold whitespace-nowrap"
+                      style="color: black; font-size:25px; font-family: 'Inter', sans-serif;">PathFinder AI</span>
             </a>
 
+            <div class="flex items-center lg:order-2" style="margin: 10px">
+                {% if 'user_id' in request.session %}
+                    <a href="{% url 'users:user_profile' %}"
+                       class="text-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 hover:bg-gray-200 focus:outline-none">
+                        Hi! {{ request.session.user_name }}
+                    </a>
 
-            <div class="flex items-center lg:order-2">
-                <a href="{% url 'users:signin' %}"
-                   class="text-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 hover:bg-gray-200 focus:outline-none">
-                    Log in
-                </a>
-                <a href="{% url 'users:signup' %}"
-                   class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 focus:outline-none">Register</a>
+                    <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown"
+                         data-dropdown-placement="bottom-start"
+                         class="w-10 h-10 rounded-full cursor-pointer account-img" style="margin-right: 1rem "
+                         src="{{ request.user.profile.avatar.url }}" alt="User dropdown">&nbsp;
+                    <a href="{% url 'users:signout' %}" class="text-gray-700 hover:text-purple-700" style="color: #5521b5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+                             stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v15A2.25 2.25 0 007.5 22.5h6a2.25 2.25 0 002.25-2.25V15m-4.5-3h9m0 0l-3-3m3 3l-3 3"/>
+                        </svg>
+                    </a>
+
+                    {#<a href="{% url 'users:signout' %}"> <i class="fa-solid fa-right-from-bracket fa-xl"#}
+                    {#style="color: #6732bd;"></i> </a>#}
+
+
+                    <!-- Dropdown menu -->
+                    <div id="userDropdown"
+                         class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44">
+                        <div class="px-4 py-3 text-sm text-gray-900">
+                            <div>{{ request.user.username }}</div>
+                            <div class="font-medium truncate">{{ request.user.email }}</div>
+                        </div>
+                        <ul class="py-2 text-sm text-gray-700" aria-labelledby="avatarButton">
+                            <li>
+                                <a href="{% url 'users:user_profile' %}"
+                                   class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Profile</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'institutions:favourites' %}"
+                                   class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Favourites</a>
+                            </li>
+                             <li>
+                               <a href="{% url 'users:signout' %}"
+                               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" style="color: red">Log
+                                Out</a>
+                            </li>
+                        </ul>
+                    </div>
+                {% else %}
+                    <a href="{% url 'users:signin' %}"
+                       class="text-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 hover:bg-gray-200 focus:outline-none">
+                        Log in
+                    </a>
+                    <a href="{% url 'users:signup' %}"
+                       class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 focus:outline-none">Register</a>
+                {% endif %}
                 <button data-collapse-toggle="mobile-menu-2" type="button"
                         class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                         aria-controls="mobile-menu-2" aria-expanded="false">
@@ -72,108 +117,37 @@
                               d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                               clip-rule="evenodd"></path>
                     </svg>
-                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                              clip-rule="evenodd"></path>
-                    </svg>
                 </button>
-
-                <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown"
-                     data-dropdown-placement="bottom-start" class="w-10 h-10 rounded-full cursor-pointer account-img"
-                     src="{% static 'assets/images/dev.jpg' %}" alt="User dropdown">
-
-                <!-- Dropdown menu -->
-                <div id="userDropdown"
-                     class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600">
-                    <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-                        <div>Bonnie Green</div>
-                        <div class="font-medium truncate">name@flowbite.com</div>
-                    </div>
-                    <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
-                        <li>
-                            <a href="#"
-                               class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="#"
-                               class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
-                        </li>
-
-                    </ul>
-                    <div class="py-1">
-                        <a href="#"
-                           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
-                            out</a>
-                    </div>
-                </div>
-
-                {# middle navigation#}
-
             </div>
             <div class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1 nav-btn"
                  id="mobile-menu-2">
-                <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
-                    <li>
-                    </li>
+                <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-4 lg:mt-0">
                     <li>
                         <a href="{% url 'dashboard:dashboard' %}"
-                           class="block py-2 pl-3 pr-4 text-white bg-purple-700 rounded lg:bg-transparent lg:text-purple-700 lg:p-0 dark:text-white"
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'dashboard' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}"
                            aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="{% url 'institutions:courses' %}"
-                           class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 ">Courses</a>
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'courses' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Courses</a>
                     </li>
                     <li>
                         <a href="{% url 'institutions:institutions' %}"
-                           class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0">Institutions</a>
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'institutions' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Institutions</a>
                     </li>
                     <li>
-                        <a href="{% url 'users:profile' %}"
-                           class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0">Profile</a>
+                        <a href="{% url 'institutions:favourites' %}"
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'favourites' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Favourites</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'users:user_profile' %}"
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Profile</a>
                     </li>
                 </ul>
             </div>
+
         </div>
     </nav>
-    {#    SEARCH#}
-{#<div class="relative w-full">#}
-{#<i class="fa-solid fa-magnifying-glass" style="margin-top: 20px"></i>#}
-{##}
-{#  <input id="searchfield"#}
-{#    type="search"#}
-{#    placeholder="Search..."#}
-{#    class="w-full p-2 text-grey-800 border border-gray-300 rounded-lg text-sm lg:text-base#}
-{#      focus:border-purple-500 focus:ring-2 focus:ring-purple-500 pl-8 pr-2"#}
-{#    style="border-radius: 0; width: 100%">#}
-{#</div>#}
-
-
-{#<form class="max-w-md mx-auto">#}
-{#  <center>#}
-{#    <label for="default-search" class="mb-2 text-sm font-medium text-purple-900 sr-only">Search</label>#}
-{#    <div class="relative search-div">#}
-{#      <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">#}
-{#        <svg class="w-4 h-4 text-purple-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">#}
-{#          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>#}
-{#        </svg>#}
-{#      </div>#}
-{#      <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-purple-900 border#}
-{#      border-purple-300 rounded-lg bg-purple-50 focus:ring-purple-500 focus:border-purple-500"#}
-{#             placeholder="   &nbsp;&nbsp;Search for Degrees and Institutions..." required style="border-radius: 1rem; border: #5521b5;#}
-{#      background-color: white"/>#}
-{#      <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-700#}
-{#       focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2">Search</button>#}
-{#    </div>#}
-{#  </center>#}
-{#</form>#}
-
-
-
-
-
 </header>
 
 
@@ -185,28 +159,8 @@
 </main>
 
 
-<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-
 </body>
 
 </html>
 
 
-{#                <form class="max-w-md ms-4 w-full">#}
-{#                    <label for="default-search"#}
-{#                        class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>#}
-{#                    <div class="relative">#}
-{#                        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">#}
-{#                            <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"#}
-{#                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">#}
-{#                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"#}
-{#                                    stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />#}
-{#                            </svg>#}
-{#                        </div>#}
-{#                        <input type="search" id="default-search"#}
-{#                            class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"#}
-{#                            placeholder="Search Mockups, Logos..." required />#}
-{#                        <button type="submit"#}
-{#                            class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">Search</button>#}
-{#                    </div>#}
-{#                </form>#}
