--- a/recommender/templates/base.html
+++ b/recommender/templates/base.html
@@ -148,7 +148,7 @@
                            class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Contact</a>
                     </li>
                  <li>
-                        <a href="{% url 'users:user_profile' %}"
+                        <a href="{% url 'dashboard:about_page' %}"
                            class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">About</a>
                     </li>
                 </ul>
